Adjust santa tracker smoke test to work with JDK16